--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,11 @@ cachetools==4.2.2
 certifi==2021.5.30
 chardet==4.0.0
 charset-normalizer==2.0.4
+greenlet==1.1.1
 idna==3.2
+logging==0.4.9.6
 multidict==5.1.0
+psycopg2==2.9.1
 pyaes==1.6.1
 PySocks==1.7.1
 python-telegram-bot==13.7
@@ -18,6 +21,7 @@ pytz==2021.1
 requests==2.26.0
 six==1.16.0
 soupsieve==2.2.1
+SQLAlchemy==1.4.23
 tornado==6.1
 typing-extensions==3.10.0.0
 tzlocal==3.0
