--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ cover/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
+*.sqlite
 
 # Flask stuff:
 instance/
@@ -151,6 +152,9 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
+
+# Bot sessions
+*.session
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
