--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.7.4.post0
 APScheduler==3.6.3
+async-generator==1.10
 async-lru==1.0.2
 async-timeout==3.0.1
 attrs==21.2.0
@@ -7,25 +8,37 @@ beautifulsoup4==4.9.3
 bs4==0.0.1
 cachetools==4.2.2
 certifi==2021.5.30
+cffi==1.15.1
 chardet==4.0.0
 charset-normalizer==2.0.4
+cryptography==37.0.4
 greenlet==1.1.1
+h11==0.13.0
 idna==3.2
 multidict==5.1.0
+outcome==1.2.0
 psycopg2-binary==2.9.1
 pyaes==1.6.1
+pycparser==2.21
+pyOpenSSL==22.0.0
 Pyrogram==2.0.30
 PySocks==1.7.1
 python-decouple==3.6
 python-telegram-bot==13.7
 pytz==2021.1
 requests==2.26.0
+selenium==4.3.0
 six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
 soupsieve==2.2.1
 SQLAlchemy==1.4.23
 TgCrypto==1.2.3
 tornado==6.1
+trio==0.21.0
+trio-websocket==0.9.2
 typing-extensions==3.10.0.0
 tzlocal==3.0
 urllib3==1.26.6
+wsproto==1.1.0
 yarl==1.6.3
