Improve ban user plugin and bug fix.

--- a/.gitignore
+++ b/.gitignore
@@ -155,6 +155,7 @@ cython_debug/
 
 # Bot sessions
 *.session
+*.session-journal
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
