--- a/requirements.txt
+++ b/requirements.txt
@@ -19,13 +19,16 @@ multidict==5.1.0
 outcome==1.2.0
 psycopg2-binary==2.9.1
 pyaes==1.6.1
+pybrowsers==0.5.1
 pycparser==2.21
 pyOpenSSL==22.0.0
 Pyrogram==2.0.30
 PySocks==1.7.1
 python-decouple==3.6
+python-dotenv==0.20.0
 python-telegram-bot==13.7
 pytz==2021.1
+pyxdg==0.28
 requests==2.26.0
 selenium==4.3.0
 six==1.16.0
@@ -40,5 +43,6 @@ trio-websocket==0.9.2
 typing-extensions==3.10.0.0
 tzlocal==3.0
 urllib3==1.26.6
+webdriver-manager==3.8.0
 wsproto==1.1.0
 yarl==1.6.3
