--- a/.gitignore
+++ b/.gitignore
@@ -156,6 +156,7 @@ cython_debug/
 # Bot sessions
 *.session
 *.session-journal
+*.zip
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
